welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:3: error: not found: value x
getCouleurSol() == x
                   ^SlugTracking:4: error: not found: value If
If (x == color.green) {avance()}
^